# basic.py

./: .pre-commit-config.yaml  README.md  pyproject.toml
basic/: __main__.py  emitter.py  lex.py  lexer.py  parser.py  token.py  tokens.py
tests/: hello.ttb
